# DRF-task-system

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
sub_task/: models.py  serializers.py  urls.py  views.py
sub_task/migrations/: 0001_initial.py  0002_alter_sudtask_id.py  0003_alter_sudtask_complete_date_and_more.py
task/: models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_task_id_alter_task_team.py  0003_alter_task_complete_date_alter_task_created_date_and_more.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_created_date_alter_user_updated_date.py
