[tool.poetry]
name = "drf-task-system"
version = "0.1.0"
description = ""
authors = ["KooHyunJung <ghj3160@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.4"
psycopg2-binary = "^2.9.7"
django-rest-framework-docs = "^0.1.7"
drf-yasg = "^1.21.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
